fixed spacing issue with the gallery

--- a/css/main.css
+++ b/css/main.css
@@ -110,6 +110,10 @@ PAGE: PORTFOLIO
     font-size: .75em;
     margin: 0px;
 }
+#gallery {
+    margin: 0px;
+    padding: 0px
+}
 
 
 /*************************
